--- a/encyclopedia/templates/encyclopedia/entry.html
+++ b/encyclopedia/templates/encyclopedia/entry.html
@@ -5,5 +5,6 @@
 {% endblock %}
 
 {% block body %}
+    <a href="{% url 'edit' %}?t={{ title }}">[edit]</a>
     {{ entry_contents }}
 {% endblock %}
