--- a/encyclopedia/templates/encyclopedia/create.html
+++ b/encyclopedia/templates/encyclopedia/create.html
@@ -10,13 +10,14 @@
     <form action="{% url 'create' %}" method="POST">
         {% csrf_token %}
         <div class="form-section">
-            <input type="text" name="new_title" placeholder="Title goes here">
+            <label>Title</label>
+            <input type="text" name="new_title" id="inputTitle" placeholder="Entry title">
         </div>
         <div class="form-section">
-            <textarea name="new_content" placeholder="Article goes here"></textarea>
+            <textarea name="new_content" placeholder="Entry text"></textarea>
         </div>
         <div class="form-section">
-            <input type="submit" value="Save">
+            <input type="submit" id="saveNew" value="Save">
         </div>
     </form>
 {% endblock %}
